projects images fixed

--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
 						</p>
 
 						<a
-							href="#contact"
+							href="assets/CV_JulianHincapie.pdf"
+							target="_blank"
+							download="CV-Julian-Hincapie.pdf"
 							class="button"
-							>Contact Me</a
+							>See my CV</a
 						>
 					</div>
 
@@ -371,14 +373,65 @@
 				<div class="projects__container container grid">
 					<article class="projects__card">
 						<img
-							src="assets/project-img-1.jpg"
+							src="assets/e-commerce.png"
+							alt="project image"
+							class="projects__img" />
+						<div class="projects__modal">
+							<span class="projects__subtitle">Web</span>
+							<h2 class="projects__title">E-commerce</h2>
+							<a
+								target="_blank"
+								href="https://singular-monstera-0511b3.netlify.app/"
+								class="projects__button">
+								View demo
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 24 24"
+									width="24"
+									height="24">
+									<path
+										d="M10 6V8H5V19H16V14H18V20C18 20.5523 17.5523 21 17 21H4C3.44772 21 3 20.5523 3 20V7C3 6.44772 3.44772 6 4 6H10ZM21 3V11H19L18.9999 6.413L11.2071 14.2071L9.79289 12.7929L17.5849 5H13V3H21Z"></path>
+								</svg>
+							</a>
+						</div>
+					</article>
+
+					<!-- <article class="projects__card">
+						<img
+							src="assets/coin-market.png"
 							alt="project image"
 							class="projects__img" />
 						<div class="projects__modal">
 							<span class="projects__subtitle">Web</span>
 							<h2 class="projects__title">Project 1</h2>
 							<a
-								href=""
+								target="_blank"
+								href="https://coin-market-app.vercel.app/"
+								class="projects__button">
+								View demo
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 24 24"
+									width="24"
+									height="24">
+									<path
+										d="M10 6V8H5V19H16V14H18V20C18 20.5523 17.5523 21 17 21H4C3.44772 21 3 20.5523 3 20V7C3 6.44772 3.44772 6 4 6H10ZM21 3V11H19L18.9999 6.413L11.2071 14.2071L9.79289 12.7929L17.5849 5H13V3H21Z"></path>
+								</svg>
+							</a>
+						</div>
+					</article> -->
+
+					<article class="projects__card">
+						<img
+							src="assets/admin-pacientes.png"
+							alt="project image"
+							class="projects__img" />
+						<div class="projects__modal">
+							<span class="projects__subtitle">Web</span>
+							<h2 class="projects__title">Admin Pacientes</h2>
+							<a
+								target="_blank"
+								href="https://codesandbox.io/s/github/julianhv20/Administrador-citas"
 								class="projects__button">
 								View demo
 								<svg
@@ -395,38 +448,15 @@
 
 					<article class="projects__card">
 						<img
-							src="assets/project-img-1.jpg"
+							src="assets/cotizador-cripto.png"
 							alt="project image"
 							class="projects__img" />
 						<div class="projects__modal">
 							<span class="projects__subtitle">Web</span>
-							<h2 class="projects__title">Project 1</h2>
+							<h2 class="projects__title">Crypto market</h2>
 							<a
-								href=""
-								class="projects__button">
-								View demo
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									viewBox="0 0 24 24"
-									width="24"
-									height="24">
-									<path
-										d="M10 6V8H5V19H16V14H18V20C18 20.5523 17.5523 21 17 21H4C3.44772 21 3 20.5523 3 20V7C3 6.44772 3.44772 6 4 6H10ZM21 3V11H19L18.9999 6.413L11.2071 14.2071L9.79289 12.7929L17.5849 5H13V3H21Z"></path>
-								</svg>
-							</a>
-						</div>
-					</article>
-
-					<article class="projects__card">
-						<img
-							src="assets/project-img-1.jpg"
-							alt="project image"
-							class="projects__img" />
-						<div class="projects__modal">
-							<span class="projects__subtitle">Web</span>
-							<h2 class="projects__title">Project 1</h2>
-							<a
-								href=""
+								target="_blank"
+								href="https://csb-6k4rc-git-main-julianhv20.vercel.app/"
 								class="projects__button">
 								View demo
 								<svg
